# sentiment-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt  requirements.txt  run.sh
app/: broker.py  dependencies.py  main.py  settings.py
app/models/: check.py  keycloak.py  upload.py  upload_access.py  user.py
app/routes/: check.py  uploads.py  users.py
app/services/: sentiment_predict.py
app/tests/: test_app.py  test_robust_model.py
