[tool.poetry]
name = "sentiment-analyzer"
version = "0.1.0"
description = ""
authors = ["Olga Shavochkina <olya.shavochkina@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.0"}
transformers = "^4.44.2"
torch = {version = "2.2.2+cpu", source="pytorch"}
python-multipart = "^0.0.9"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pydantic = "^2.9.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
sqlmodel = "^0.0.22"
taskiq = "^0.11.7"
taskiq-aio-pika = "^0.4.1"
numpy = ">=1.26.4,<1.27.0"
taskiq-fastapi = "^0.3.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

